added in basic API request for trending coins, also changed width of #scroll text so that it no longer cuts off halfway through text scroll

--- a/src/Components/EntryScreen/EntryScreen.scss
+++ b/src/Components/EntryScreen/EntryScreen.scss
@@ -1,9 +1,18 @@
 .LoadingScreen {
+	width: 100vw;
+	height: 100%;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
 	.LoadingGif {
-		height: 5em;
-		width: auto;
+		width: 5em;
+		height: auto;
 	}
 	.LoadingTitle {
 		color: white;
+		font-size: medium;
 	}
 }
