--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=HomePage.css.map */
+.HomePageScreen {
+  background-color: blue;
+}
+/*# sourceMappingURL=HomePage.css.map */
