--- a/src/Components/EntryScreen/EntryScreen.css
+++ b/src/Components/EntryScreen/EntryScreen.css
@@ -1,9 +1,29 @@
+.LoadingScreen {
+  width: 100vw;
+  height: 100%;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .LoadingScreen .LoadingGif {
-  height: 5em;
-  width: auto;
+  width: 5em;
+  height: auto;
 }
 
 .LoadingScreen .LoadingTitle {
   color: white;
+  font-size: medium;
 }
 /*# sourceMappingURL=EntryScreen.css.map */
