--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,22 @@
+html {
+	width: 100%;
+	height: 100%;
+}
+
 body {
+	width: 100%;
+	height: 100%;
+	overflow-y: hidden;
+	overflow-x: scroll;
 	margin: 0;
-	font-family: 'Zen Antique', serif;
-	background-color: white;
+	font-family: 'Monda', sans-serif;
+	background-image: url(./GlobalAssets//background.png);
+	background-attachment: fixed;
+	background-size: cover;
+}
+div#root {
+	width: 100%;
+	height: 100%;
 }
 
 code {
