--- a/src/Components/HomePage/Components/BNS/BNS.scss
+++ b/src/Components/HomePage/Components/BNS/BNS.scss
@@ -18,9 +18,9 @@
 
 	-moz-animation: my-animation 15s linear infinite;
 	-webkit-animation: my-animation 15s linear infinite;
-	animation: my-animation 10s linear infinite;
+	animation: my-animation 8s linear infinite;
 
-	width: fit-content;
+	width: 100vw;
 }
 
 /* for Firefox */
